examples/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - name: nginx 
    port: 80
    protocol: TCP
  selector:
    app: nginx
